--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 beautifulsoup4==4.5.1
 click==6.7
 cookies==2.2.1
+Flask==0.11.1
+Flask-Cors==2.1.2
 geopy==1.11.0
 googlefinance==0.7
 httplib2==0.9.2
